# RCSB_APP_CHEM HISTORY
   8-Mar-2020  - V0.10 Created module
  15-Mar-2020  - V0.11 Preliminary testing pipeline created
  16-Mar-2020  - V0.12 Preliminary deployment
  18-Mar-2020  - V0.13 Update deployment scripts
  10-Apr-2020  - V0.14 Update default failures and configuration settings
  11-Apr-2020  - V0.15 Further updates in configuration bootstrap


